added persistence for form definitions. Previous form definitions associated with a configurations are deleted on resync

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
                         <Export-Package>
                             org.motechproject.odk.service;version=${project.version},
                             org.motechproject.odk.web;version=${project.version},
+                            org.motechproject.odk.repository;version=${project.version},
+                            org.motechproject.odk.domain;version=${project.version},
                         </Export-Package>
                     </instructions>
                 </configuration>
