beginning work on settings view

--- a/src/main/resources/ODK.properties
+++ b/src/main/resources/ODK.properties
@@ -1,3 +1,2 @@
 #custom properties for the ODK
-org.motechproject.odk.sample.setting=my sample setting
-org.motechproject.odk.bundle.name=ODK
+org.motechproject.odk.bundle.name=odk
